fix: replace Stream.toList() with Collectors.toList() for Android pre-API-34 compatibility
Co-authored-by: DevSameul <263100734+DevSameul@users.noreply.github.com>